# superpoint_onnx_cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  Dockerfile  README.md  compose.yaml
.devcontainer/: devcontainer.json
assets/: focus_descriptors.csv
include/: superpoint.hpp
src/: demo.cpp  superpoint.cpp
